After load configuration also load liveticker settings
git-svn-id: https://localhost/svn/CounterManager/trunk@8091 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/gui/resources/CounterManager_de.properties
+++ b/src/countermanager/gui/resources/CounterManager_de.properties
@@ -193,3 +193,4 @@ lockscreenMenuItem=Eingabesperre
 setAllActiveMenuItem=Alle aktiv
 largeFontMenuItem=Gro\u00dfer Font
 Scripts\:=Scripte:
+configurationFileFilter=Konfiguration (*.ini)en
