--- a/src/countermanager/gui/resources/CounterManager_en.properties
+++ b/src/countermanager/gui/resources/CounterManager_en.properties
@@ -191,3 +191,4 @@ lockscreenMenuItem=Lock Screen
 setAllActiveMenuItem=Set All Active
 largeFontMenuItem=Large Font
 Scripts\:=Scripts:
+configurationFileFilter=Configurations (*.ini)
