Check for updates
git-svn-id: https://localhost/svn/CounterManager/trunk@9314 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/gui/resources/CounterManager_en.properties
+++ b/src/countermanager/gui/resources/CounterManager_en.properties
@@ -192,3 +192,5 @@ setAllActiveMenuItem=Set All Active
 largeFontMenuItem=Large Font
 Scripts\:=Scripts:
 configurationFileFilter=Configurations (*.ini)
+checkUpdatesMEnuItem=Check for updates
+checkUpdatesMenuItem=Check for updates
