--- a/src/countermanager/gui/resources/CounterManager_de.properties
+++ b/src/countermanager/gui/resources/CounterManager_de.properties
@@ -194,3 +194,5 @@ setAllActiveMenuItem=Alle aktiv
 largeFontMenuItem=Gro\u00dfer Font
 Scripts\:=Scripte:
 configurationFileFilter=Konfiguration (*.ini)en
+checkUpdatesMEnuItem=Auf updates pr\u00fcfen
+checkUpdatesMenuItem=Auf Updates pr\u00fcfen
