Fix message for update checks
git-svn-id: https://localhost/svn/CounterManager/trunk@9319 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/gui/resources/CounterManager_de.properties
+++ b/src/countermanager/gui/resources/CounterManager_de.properties
@@ -194,5 +194,5 @@ setAllActiveMenuItem=Alle aktiv
 largeFontMenuItem=Gro\u00dfer Font
 Scripts\:=Scripte:
 configurationFileFilter=Konfiguration (*.ini)en
-checkUpdatesMEnuItem=Auf updates pr\u00fcfen
 checkUpdatesMenuItem=Auf Updates pr\u00fcfen
+You\ are\ using\ the\ current\ version\ of\ CounterManager.=Sie verwenden die aktuelle Version vom Z\u00e4hlger\u00e4temanager.
