--- a/src/countermanager/gui/resources/CounterManager_en.properties
+++ b/src/countermanager/gui/resources/CounterManager_en.properties
@@ -192,5 +192,5 @@ setAllActiveMenuItem=Set All Active
 largeFontMenuItem=Large Font
 Scripts\:=Scripts:
 configurationFileFilter=Configurations (*.ini)
-checkUpdatesMEnuItem=Check for updates
 checkUpdatesMenuItem=Check for updates
+You\ are\ using\ the\ current\ version\ of\ CounterManager.=You are using the current version of Scoreboard Manager.
